# Makereadme

./: .gitignore  Cargo.toml  README.md  system_prompt.md
src/: main.rs
src/apis/: api_lib.rs  gemini.rs  groq.rs  llmapi.rs
src/libs/: action_executer.rs  build.rs  debug.rs  errors.rs  memory.rs  optlib.rs  prompt.rs
src/local/: llama_cpp2.rs  local.rs  ollama.rs
