[package]
name = "MakeREADME"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
colored = "3.1.1"
dotenv = "0.15.0"
groq-api-rs = "0.2.0"
inquire = "0.9.4"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
